test/src/main/bkool/parser/BKOOLParser.py
# Generated from main/bkool/parser/BKOOL.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKOOLParser ( Parser ):

    grammarFileName = "BKOOL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'readInteger'", "'printInteger'", "'readFloat'", 
                     "'writeFloat'", "'printBoolean'", "'readString'", "'printString'", 
                     "'super'", "'preventDefault'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'auto'", "'break'", 
                     "'integer'", "'void'", "'array'", "'float'", "'return'", 
                     "'out'", "'boolean'", "'for'", "'string'", "'continue'", 
                     "'do'", "'function'", "'of'", "'else'", "'if'", "'while'", 
                     "'inherit'", "'+'", "'-'", "'*'", "'/'", "'%'", "'<'", 
                     "'>'", "'<='", "'>='", "'!'", "'&&'", "'||'", "'=='", 
                     "'!='", "'::'", "'.'", "','", "';'", "'='", "':'", 
                     "'('", "')'", "'['", "']'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "COMMENT", "INTEGER_LIT", 
                      "FLOAT_LIT", "BOOLEAN_LIT", "STRING_LIT", "ARRAY_LIT", 
                      "ARRAY_LIT_INT", "ARRAY_LIT_FLOAT", "ARRAY_LIT_STRINGLIST", 
                      "AUTO", "BREAK", "INTEGER", "VOID", "ARRAY", "FLOAT", 
                      "RETURN", "OUT", "BOOLEAN", "FOR", "STRING", "CONTINUE", 
                      "DO", "FUNCTION", "OF", "ELSE", "IF", "WHILE", "INHERIT", 
                      "PLUS", "MINUS", "MUL", "DIV", "MOD", "LESS", "GREATER", 
                      "LTE", "GTE", "NOT", "AND", "OR", "EQUAL_TO", "NOT_EQUAL", 
                      "CONCAT", "PERIOD", "COMMA", "SEMI", "EQUAL", "COLON", 
                      "LB", "RB", "LSB", "RSB", "LCB", "RCB", "IDENTIFIER", 
                      "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decls = 1
    RULE_array_type = 2
    RULE_element_type = 3
    RULE_dimesion = 4
    RULE_dimesion_type_int = 5
    RULE_dimesion_type_float = 6
    RULE_variable_decl = 7
    RULE_var_decl_no_eq = 8
    RULE_var_decl_eq = 9
    RULE_recursive = 10
    RULE_array_list = 11
    RULE_exp_list_term = 12
    RULE_identifier_list = 13
    RULE_expression_list = 14
    RULE_exp_list_type_int = 15
    RULE_exp_list_type_float = 16
    RULE_exp_list_type_string = 17
    RULE_parameter = 18
    RULE_expression = 19
    RULE_expression_1 = 20
    RULE_expression_2 = 21
    RULE_expression_3 = 22
    RULE_expression_4 = 23
    RULE_expression_5 = 24
    RULE_expression_6 = 25
    RULE_expression_7 = 26
    RULE_expression_8 = 27
    RULE_factor = 28
    RULE_function_call = 29
    RULE_exps_list = 30
    RULE_exp_list = 31
    RULE_statement = 32
    RULE_assign_stmt = 33
    RULE_lhs = 34
    RULE_if_stmt = 35
    RULE_for_stmt = 36
    RULE_scala_val = 37
    RULE_init_expr = 38
    RULE_condition_expr = 39
    RULE_update_expr = 40
    RULE_while_stmt = 41
    RULE_do_while_stmt = 42
    RULE_call_stmt = 43
    RULE_block_stmt = 44
    RULE_statement_term = 45
    RULE_statement_list = 46
    RULE_break_stmt = 47
    RULE_continue_stmt = 48
    RULE_return_stmt = 49
    RULE_function_decl = 50
    RULE_inheritance = 51
    RULE_function_name = 52
    RULE_paramter_list = 53
    RULE_paramter_list_term = 54
    RULE_return_type = 55
    RULE_s_func_decl = 56
    RULE_read_integer = 57
    RULE_print_integer = 58
    RULE_read_float = 59
    RULE_write_float = 60
    RULE_print_boolean = 61
    RULE_read_string = 62
    RULE_print_string = 63
    RULE_super_ = 64
    RULE_prevent_default = 65

    ruleNames =  [ "program", "decls", "array_type", "element_type", "dimesion", 
                   "dimesion_type_int", "dimesion_type_float", "variable_decl", 
                   "var_decl_no_eq", "var_decl_eq", "recursive", "array_list", 
                   "exp_list_term", "identifier_list", "expression_list", 
                   "exp_list_type_int", "exp_list_type_float", "exp_list_type_string", 
                   "parameter", "expression", "expression_1", "expression_2", 
                   "expression_3", "expression_4", "expression_5", "expression_6", 
                   "expression_7", "expression_8", "factor", "function_call", 
                   "exps_list", "exp_list", "statement", "assign_stmt", 
                   "lhs", "if_stmt", "for_stmt", "scala_val", "init_expr", 
                   "condition_expr", "update_expr", "while_stmt", "do_while_stmt", 
                   "call_stmt", "block_stmt", "statement_term", "statement_list", 
                   "break_stmt", "continue_stmt", "return_stmt", "function_decl", 
                   "inheritance", "function_name", "paramter_list", "paramter_list_term", 
                   "return_type", "s_func_decl", "read_integer", "print_integer", 
                   "read_float", "write_float", "print_boolean", "read_string", 
                   "print_string", "super_", "prevent_default" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    COMMENT=10
    INTEGER_LIT=11
    FLOAT_LIT=12
    BOOLEAN_LIT=13
    STRING_LIT=14
    ARRAY_LIT=15
    ARRAY_LIT_INT=16
    ARRAY_LIT_FLOAT=17
    ARRAY_LIT_STRINGLIST=18
    AUTO=19
    BREAK=20
    INTEGER=21
    VOID=22
    ARRAY=23
    FLOAT=24
    RETURN=25
    OUT=26
    BOOLEAN=27
    FOR=28
    STRING=29
    CONTINUE=30
    DO=31
    FUNCTION=32
    OF=33
    ELSE=34
    IF=35
    WHILE=36
    INHERIT=37
    PLUS=38
    MINUS=39
    MUL=40
    DIV=41
    MOD=42
    LESS=43
    GREATER=44
    LTE=45
    GTE=46
    NOT=47
    AND=48
    OR=49
    EQUAL_TO=50
    NOT_EQUAL=51
    CONCAT=52
    PERIOD=53
    COMMA=54
    SEMI=55
    EQUAL=56
    COLON=57
    LB=58
    RB=59
    LSB=60
    RSB=61
    LCB=62
    RCB=63
    IDENTIFIER=64
    WS=65
    UNCLOSE_STRING=66
    ILLEGAL_ESCAPE=67
    ERROR_CHAR=68

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKOOLParser.EOF, 0)

        def decls(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.DeclsContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.DeclsContext,i)


        def getRuleIndex(self):
            return BKOOLParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKOOLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 132
                self.decls()
                self.state = 135 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==BKOOLParser.IDENTIFIER):
                    break

            self.state = 137
            self.match(BKOOLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_decl(self):
            return self.getTypedRuleContext(BKOOLParser.Variable_declContext,0)


        def function_decl(self):
            return self.getTypedRuleContext(BKOOLParser.Function_declContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_decls

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecls" ):
                return visitor.visitDecls(self)
            else:
                return visitor.visitChildren(self)




    def decls(self):

        localctx = BKOOLParser.DeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decls)
        try:
            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.variable_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.function_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(BKOOLParser.ARRAY, 0)

        def LSB(self):
            return self.getToken(BKOOLParser.LSB, 0)

        def dimesion(self):
            return self.getTypedRuleContext(BKOOLParser.DimesionContext,0)


        def RSB(self):
            return self.getToken(BKOOLParser.RSB, 0)

        def OF(self):
            return self.getToken(BKOOLParser.OF, 0)

        def element_type(self):
            return self.getTypedRuleContext(BKOOLParser.Element_typeContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_array_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_type" ):
                return visitor.visitArray_type(self)
            else:
                return visitor.visitChildren(self)




    def array_type(self):

        localctx = BKOOLParser.Array_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_array_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(BKOOLParser.ARRAY)
            self.state = 144
            self.match(BKOOLParser.LSB)
            self.state = 145
            self.dimesion()
            self.state = 146
            self.match(BKOOLParser.RSB)
            self.state = 147
            self.match(BKOOLParser.OF)
            self.state = 148
            self.element_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Element_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(BKOOLParser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(BKOOLParser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(BKOOLParser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(BKOOLParser.STRING, 0)

        def AUTO(self):
            return self.getToken(BKOOLParser.AUTO, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_element_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElement_type" ):
                return visitor.visitElement_type(self)
            else:
                return visitor.visitChildren(self)




    def element_type(self):

        localctx = BKOOLParser.Element_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_element_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKOOLParser.AUTO) | (1 << BKOOLParser.INTEGER) | (1 << BKOOLParser.FLOAT) | (1 << BKOOLParser.BOOLEAN) | (1 << BKOOLParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimesionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dimesion_type_int(self):
            return self.getTypedRuleContext(BKOOLParser.Dimesion_type_intContext,0)


        def dimesion_type_float(self):
            return self.getTypedRuleContext(BKOOLParser.Dimesion_type_floatContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_dimesion

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDimesion" ):
                return visitor.visitDimesion(self)
            else:
                return visitor.visitChildren(self)




    def dimesion(self):

        localctx = BKOOLParser.DimesionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_dimesion)
        try:
            self.state = 154
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.INTEGER_LIT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.dimesion_type_int()
                pass
            elif token in [BKOOLParser.FLOAT_LIT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 153
                self.dimesion_type_float()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Dimesion_type_intContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER_LIT(self):
            return self.getToken(BKOOLParser.INTEGER_LIT, 0)

        def COMMA(self):
            return self.getToken(BKOOLParser.COMMA, 0)

        def dimesion_type_int(self):
            return self.getTypedRuleContext(BKOOLParser.Dimesion_type_intContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_dimesion_type_int

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDimesion_type_int" ):
                return visitor.visitDimesion_type_int(self)
            else:
                return visitor.visitChildren(self)




    def dimesion_type_int(self):

        localctx = BKOOLParser.Dimesion_type_intContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_dimesion_type_int)
        try:
            self.state = 160
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                self.match(BKOOLParser.INTEGER_LIT)
                self.state = 157
                self.match(BKOOLParser.COMMA)
                self.state = 158
                self.dimesion_type_int()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 159
                self.match(BKOOLParser.INTEGER_LIT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Dimesion_type_floatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FLOAT_LIT(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.FLOAT_LIT)
            else:
                return self.getToken(BKOOLParser.FLOAT_LIT, i)

        def COMMA(self):
            return self.getToken(BKOOLParser.COMMA, 0)

        def dimesion_type_float(self):
            return self.getTypedRuleContext(BKOOLParser.Dimesion_type_floatContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_dimesion_type_float

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDimesion_type_float" ):
                return visitor.visitDimesion_type_float(self)
            else:
                return visitor.visitChildren(self)




    def dimesion_type_float(self):

        localctx = BKOOLParser.Dimesion_type_floatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_dimesion_type_float)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(BKOOLParser.FLOAT_LIT)
            self.state = 163
            self.match(BKOOLParser.COMMA)
            self.state = 164
            self.dimesion_type_float()
            self.state = 165
            self.match(BKOOLParser.FLOAT_LIT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl_no_eq(self):
            return self.getTypedRuleContext(BKOOLParser.Var_decl_no_eqContext,0)


        def var_decl_eq(self):
            return self.getTypedRuleContext(BKOOLParser.Var_decl_eqContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_variable_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable_decl" ):
                return visitor.visitVariable_decl(self)
            else:
                return visitor.visitChildren(self)




    def variable_decl(self):

        localctx = BKOOLParser.Variable_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_variable_decl)
        try:
            self.state = 169
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 167
                self.var_decl_no_eq()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 168
                self.var_decl_eq()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_decl_no_eqContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier_list(self):
            return self.getTypedRuleContext(BKOOLParser.Identifier_listContext,0)


        def COLON(self):
            return self.getToken(BKOOLParser.COLON, 0)

        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def element_type(self):
            return self.getTypedRuleContext(BKOOLParser.Element_typeContext,0)


        def array_type(self):
            return self.getTypedRuleContext(BKOOLParser.Array_typeContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_var_decl_no_eq

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl_no_eq" ):
                return visitor.visitVar_decl_no_eq(self)
            else:
                return visitor.visitChildren(self)




    def var_decl_no_eq(self):

        localctx = BKOOLParser.Var_decl_no_eqContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_var_decl_no_eq)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.identifier_list()
            self.state = 172
            self.match(BKOOLParser.COLON)
            self.state = 175
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.AUTO, BKOOLParser.INTEGER, BKOOLParser.FLOAT, BKOOLParser.BOOLEAN, BKOOLParser.STRING]:
                self.state = 173
                self.element_type()
                pass
            elif token in [BKOOLParser.ARRAY]:
                self.state = 174
                self.array_type()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 177
            self.match(BKOOLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_decl_eqContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(BKOOLParser.IDENTIFIER, 0)

        def expression(self):
            return self.getTypedRuleContext(BKOOLParser.ExpressionContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def COMMA(self):
            return self.getToken(BKOOLParser.COMMA, 0)

        def recursive(self):
            return self.getTypedRuleContext(BKOOLParser.RecursiveContext,0)


        def COLON(self):
            return self.getToken(BKOOLParser.COLON, 0)

        def EQUAL(self):
            return self.getToken(BKOOLParser.EQUAL, 0)
